<resources>
    <string name="app_name">MotoHUB</string>
    <string name="dream_factory_api_key">dfbf68a171defe454d9b7c26005aa894de3b7e0768778b04890642167621e10c</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="fb_login">Login with Facebook</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="pwd">Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="accept_terms_and_con">Please accept the Terms and Conditions</string>
    <string name="terms_and_conditions">I have read and accept the Terms and Conditions</string>
    <string name="registration_success">You\'ve successfully registered your email!, Please Login to continue!</string>
    <string name="something_wrong">Something went wrong. Please try again</string>
    <string name="session_updated">Session Token updated successfully. Please try again!</string>
    <string name="alert_settings">Permission must be required for this app, Please enable the permissions in app settings under the permissions section.</string>
    <string name="facebook_app_id">1356755097715445</string>
    <string name="license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAijKHwN4Qvc2My8/INd2JNI31Zl1iO7NxLwdus7956M+NzomG1ubL7oM/jrHZcE7z1ywist61UaKaZkVf1glo40s65m4kpX996k/MjygZZiesxc+u5gDu2PgWk2s5Y9Pxmim3/jQBTTvcf5mzZORMhqnuV2eMU8WP2DTLWhr9vsBAxwlf6cZ/wc6wBpgQNVXml+v80kvdKdUJJWbNjtRmbmofxJPJeeWnwMLVVw+uGaZzCJ9tl2a+wJF6P4YdNms1Lz2ZGrTmZ9KKrXjaC2oPUSUL3iMhJCfL2ckewRfBIa9d39zKZwgwvTBs2YqhwDfhp6OfDG04iGx+kszTHbc/dQIDAQAB</string>
    <string name="Subscribe">Subscribe</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="monthly"> / Month</string>
    <string name="yearly"> / Year</string>
    <string name="pwd_reset">Password Reset</string>
    <string name="forgot_pwd_msg">Please enter your email address and click send code.</string>
    <string name="send_code">Send Code</string>
    <string name="already_have_code">I already have a code</string>
    <string name="email_hint">Email</string>
    <string name="empty_all">Please enter all the fields</string>
    <string name="empty_email">Please enter your Email</string>
    <string name="valid_email">Please enter the valid Email</string>
    <string name="empty_pwd">Please enter your Password</string>
    <string name="length_pwd">Password should be minimum 6 digits</string>
    <string name="empty_conf_pwd">Please enter the Confirm Password</string>
    <string name="empty_reset_code">Please enter the Reset Code</string>
    <string name="mismatch_old_pwd">Please enter the your valid Old Password</string>
    <string name="reset_password_msg">Please enter your email an the code we sent to you in order to create your new password.</string>
    <string name="enter_code">Enter Code</string>
    <string name="reset_code_hint">Reset Code</string>
    <string name="change_pwd">Change Password</string>
    <string name="new_pwd_hint">New Password</string>
    <string name="conf_new_pwd">Confirm New Password</string>
    <string name="ok">OK</string>
    <string name="create_your_profile">Create Your Profile</string>
    <string name="complete_your_profile">Complete Your Moto PROFILE</string>
    <string name="update_your_profile">Update Your Moto PROFILE</string>
    <string name="update">Update</string>
    <string name="view_your_profile">View Your Profile</string>
    <string name="car">Car</string>
    <string name="boat">Boat</string>
    <string name="spectator">Spectator</string>
    <string name="shop">Performance Shop</string>
    <string name="performance_shop">Performance \n Shop</string>
    <string name="bike">Bike</string>
    <string name="media_and_photography">Media &amp; \n Photography</string>
    <string name="kart">Kart</string>
    <string name="memo">For all Race Tracks/Promoters/Clubs/News and Media Please go to
        www.motohub.online to create your profile.</string>
    <string name="profile_trial">Your profile has been created successfully and opted for free use
        for 30 days. Your profile needs Subscription to continue after the end
        of a trial.
    </string>
    <string name="enter">ENTER</string>
    <string name="upload_moto_photo">Upload a MotoPHOTO</string>
    <string name="upload_photo">Upload a PHOTO</string>
    <string name="upload">Upload</string>
    <string name="name">Name</string>
    <string name="driver">Driver</string>
    <string name="name_of_moto">Name of Moto</string>
    <string name="profile_type">Profile Type</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="hp">HP</string>
    <string name="cc">CC</string>
    <string name="engine_specs">Engine Specs</string>
    <string name="drive_line">Driveline</string>
    <string name="panel_and_paint">Panel &amp; Paint</string>
    <string name="wheels_and_tyres">Wheels &amp; Tyres</string>
    <string name="more_info">More Information</string>
    <string name="tag_sponsor">Tag Sponsor</string>
    <string name="tag_profile">Tag Profiles</string>
    <string name="tag">Tag</string>
    <string name="tagged_profile">Tagged Profiles</string>
    <string name="tagged_profile_name">\@%s</string>
    <string name="what_do_you_want_to_follow">What do you want to follow?</string>
    <string name="everything_moto">Everything MOTO!!!</string>
    <string name="or">Or</string>
    <string name="select">Select</string>
    <string name="select_profile">Select Profile</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="moto_tutorial">MotoHUB Tutorial</string>
    <string name="skip">Skip</string>
    <string name="get_started">Let\'s Get Started</string>
    <string name="update_profile_success">Profile Updated Successfully!!!</string>
    <string name="ECU">ECU</string>
    <string name="gear_box">Gear Box</string>
    <string name="differential">Differential</string>
    <string name="clutch">Clutch</string>
    <string name="injection">Injection</string>
    <string name="fuel_system">Fuel System</string>
    <string name="turbo">Turbo</string>
    <string name="suspension">Suspension</string>
    <string name="tyres">Tyres</string>
    <string name="exhaust">Exhaust</string>
    <string name="forks">Forks</string>
    <string name="shock">Shock</string>
    <string name="lap_timer">Lap Timer</string>
    <string name="rear_set">Rear Sets</string>
    <string name="handle_bar">Handle Bars</string>
    <string name="fairings">Fairing</string>
    <string name="chain">Chain</string>
    <string name="sprockets">Sprockets</string>
    <string name="engine_cover">Engine Covers</string>
    <string name="brake_master">Brake Master</string>
    <string name="brake_pads">Brake Pads</string>
    <string name="filter">Filter</string>
    <string name="brake_fluid">Brake Fluid</string>
    <string name="engine_oil">Engine Oil</string>
    <string name="chain_lube">Chain Lube</string>
    <string name="boots">Boots</string>
    <string name="helmet">Helmet</string>
    <string name="suit">Suit</string>
    <string name="gloves">Gloves</string>
    <string name="chest_protection">Chest Protection</string>
    <string name="back_protection">Back Protection</string>
    <string name="use_desktop_version">Please use Desktop version for this profile.</string>
    <string name="give_moto_photo">Please give MotoPHOTO!</string>
    <string name="give_profile_pic">Please upload profile pic</string>
    <string name="enter_all_fields">Please enter all the fields.</string>
    <string name="enter_name">Please enter your Name.</string>
    <string name="enter_first_name">Please enter your First Name</string>
    <string name="enter_last_name">Please enter your Last Name</string>
    <string name="enter_email">Please enter your Email</string>
    <string name="enter_valid_email">Please enter a valid Email</string>
    <string name="enter_pwd">Please enter your Password</string>
    <string name="enter_min_pwd">Description should be minimum 6 digits</string>
    <string name="enter_conf_pwd">Please enter your Confirm Password</string>
    <string name="mismatch_pwd">Password and Confirm Password doesn\'t match</string>
    <string name="driver_name_err">Please enter Driver Name.</string>
    <string name="make_name_err">Please enter Maker.</string>
    <string name="model_err">Please enter Model.</string>
    <string name="hp_err">Please enter a valid HP.</string>
    <string name="engine_specs_err">Please enter Engine Specs.</string>
    <string name="drive_line_err">Please enter Driveline.</string>
    <string name="panel_and_paint_err">Please enter Panel &amp; Paint.</string>
    <string name="wheels_and_tyres_err">Please enter Wheels &amp; Tyres.</string>
    <string name="more_info_err">Please enter More Information.</string>
    <string name="follow_moto_err">Please follow one or more moto!</string>
    <string name="failed">Failed!, Please try again!</string>
    <string name="internet_failure">Failed!, Please check your internet connection!</string>
    <string name="internet_err">Please check your internet connection!</string>
    <string name="profile_created">Profile Created!</string>
    <string name="profile_completed">Profile Creation Completed!</string>
    <string name="ecu_err">Please enter ECU.</string>
    <string name="diff_err">Plese enter Differencial.</string>
    <string name="gear_err">Plasxe enter GearBox.</string>
    <string name="clutch_err">Please enter Clutch.</string>
    <string name="injection_err">Please enter Injection.</string>
    <string name="fuel_err">Please enter Fuel System.</string>
    <string name="turbo_err">Please enter Turbo.</string>
    <string name="suspension_err">Please enter Suspension.</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="news_and_media">News &amp; Media</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>
    <string name="Tracks">Tracks</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="UnFollow">UnFollow</string>
    <string name="moto_feed">MotoFeed</string>
    <string name="news_feed">NewsFeed</string>
    <string name="my_moto_file">My Profile</string>
    <string name="create_new_profile">Create a New Profile</string>
    <string name="other_profiles">Other Profiles</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="message_not_allowed_err">Please follow before chat!</string>
    <string name="alert_block">Do you want to block this profile?</string>
    <string name="alert_unblock">Do you want to unblock this profile?</string>
    <string name="follow_success">You\'ve successfully followed!</string>
    <string name="email">Email</string>
    <string name="session_name">Session name : </string>
    <string name="session_start_time">Start time : </string>
    <string name="session_end_time">End time : </string>
    <string name="session_start_time_value">5:00 pm </string>
    <string name="session_end_time_value">6:50 pm</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="enable_notificaton">Enable/Disable Notifications</string>
    <string name="on_off_sound">Turn On/Off Sound</string>
    <string name="notification_vibration">Notification Vibration</string>
    <string name="on_off_vib">Turn On/Off Vibration</string>
    <string name="phone_number">Phone Number</string>
</resources>