<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlack">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/widget_toolbar" />

    <online.motohub.util.ZoomImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btns_lay"
        android:layout_below="@+id/toolbarLayout"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/btns_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/black_orange_rectbtn_bg"
            android:text="@string/cancel"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/black_orange_rectbtn_bg"
            android:text="@string/next"
            android:textColor="@color/text_color" />
    </LinearLayout>

</RelativeLayout>