<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/widget_toolbar" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/notifications"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch_allow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notification_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:checked="true"
            android:text="@string/enable_notificaton"
            android:textColor="@color/ash"
            android:textSize="14sp"
            android:theme="@style/SwitchTheme" />

        <View
            android:id="@+id/notification_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/switch_allow"
            android:layout_marginTop="10dp"
            android:background="@color/ash" />

        <TextView
            android:id="@+id/noti_sound_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notification_view"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/notification_sound"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noti_sound_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:checked="true"
            android:text="@string/on_off_sound"
            android:textColor="@color/ash"
            android:textSize="14sp"
            android:theme="@style/SwitchTheme"

            />

        <View
            android:id="@+id/sound_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/switch_sound"
            android:layout_marginTop="10dp"
            android:background="@color/ash" />

        <TextView
            android:id="@+id/noti_vib_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sound_view"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/notification_vibration"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch_vib"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noti_vib_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:checked="true"
            android:text="@string/on_off_vib"
            android:textColor="@color/ash"
            android:textSize="14sp"
            android:theme="@style/SwitchTheme"

            />

        <View
            android:id="@+id/vib_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/switch_vib"
            android:layout_marginTop="10dp"
            android:background="@color/ash" />

    </RelativeLayout>

</LinearLayout>