<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout style="@style/LayoutMatch">

        <include
            android:id="@+id/include"
            layout="@layout/widget_toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/inputLay"
            android:layout_below="@id/include"
            android:layout_marginBottom="@dimen/size5">

            <ImageView
                android:layout_width="@dimen/size150"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/size10"
                android:layout_marginBottom="@dimen/size10"
                android:contentDescription="@string/app_name"
                android:src="@drawable/app_logo" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/inputLay"
            style="@style/LayoutMatchWrap"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/size10"
            android:background="@drawable/gray_border_bg"
            android:orientation="vertical">

            <include layout="@layout/view_profile_type" />

            <EditText
                android:id="@+id/firstNameEdt"
                style="@style/LayoutMatchWrap"
                android:layout_height="@dimen/size40"
                android:background="@null"
                android:hint="@string/first_name"
                android:inputType="textPersonName|textCapSentences"
                android:paddingStart="@dimen/size5"
                android:paddingEnd="@dimen/size5"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/text14" />

            <View
                style="@style/LayoutMatchWrap"
                android:layout_height="@dimen/size1"
                android:background="@color/colorGrey" />

            <EditText
                android:id="@+id/lastNameEdt"
                style="@style/LayoutMatchWrap"
                android:layout_height="@dimen/size40"
                android:background="@null"
                android:hint="@string/last_name"
                android:inputType="textPersonName|textCapSentences"
                android:paddingStart="@dimen/size5"
                android:paddingEnd="@dimen/size5"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/text14" />

            <View
                style="@style/LayoutMatchWrap"
                android:layout_height="@dimen/size1"
                android:background="@color/colorGrey" />

            <EditText
                android:id="@+id/phoneEdt"
                style="@style/LayoutMatchWrap"
                android:layout_height="@dimen/size40"
                android:background="@null"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingStart="@dimen/size5"
                android:paddingEnd="@dimen/size5"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/text14"
                android:visibility="gone" />

            <View
                style="@style/LayoutMatchWrap"
                android:layout_height="@dimen/size1"
                android:background="@color/colorGrey" />


            <EditText
                android:id="@+id/emailEdt"
                style="@style/LayoutMatchWrap"
                android:layout_height="@dimen/size40"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/size5"
                android:paddingEnd="@dimen/size5"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/text14" />

            <View
                style="@style/LayoutMatchWrap"
                android:layout_height="@dimen/size1"
                android:background="@color/colorGrey" />

            <EditText
                android:id="@+id/pwdEdt"
                style="@style/LayoutMatchWrap"
                android:layout_height="@dimen/size40"
                android:background="@null"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:paddingStart="@dimen/size5"
                android:paddingEnd="@dimen/size5"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/text14" />

            <View
                style="@style/LayoutMatchWrap"
                android:layout_height="@dimen/size1"
                android:background="@color/colorGrey" />

            <EditText
                android:id="@+id/confPwdEdt"
                style="@style/LayoutMatchWrap"
                android:layout_height="@dimen/size40"
                android:background="@null"
                android:hint="@string/confirm_pwd"
                android:inputType="textPassword"
                android:paddingStart="@dimen/size5"
                android:paddingEnd="@dimen/size5"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey"
                android:textSize="@dimen/text14" />

        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size40"
            android:layout_below="@+id/inputLay"
            android:layout_marginLeft="@dimen/size10"
            android:layout_marginRight="@dimen/size10"
            android:background="@drawable/black_orange_btn_bg"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text16"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>